add eng title for day of war. Small code refactoring

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,5 +17,6 @@
     "maintittle_text": "The total losses of the russian occupier",
     "generalstaff_text": "General Staff of the Armed Forces of Ukraine informs",
     "urkpeople_text": "2022-2023 - Ukrainian people",
-    "asfor_text":"As for "
+    "asfor_text":"As for ",
+    "dayofwar_text": "th day of war"
 }
