--- a/assets/translations/ua.json
+++ b/assets/translations/ua.json
@@ -17,6 +17,6 @@
     "maintittle_text": "Загальні бойові втрати російського окупанта",
     "generalstaff_text": "Генеральний штаб ЗС України інформує",
     "urkpeople_text": "2022-2023 - Народ України",
-    "asfor_text":"Станом на "
-    
+    "asfor_text":"Станом на ",
+    "dayofwar_text": "-й день війни"
 }
